[tool.poetry]
name = "cartunn-apigateway"
version = "0.1.0"
description = ""
authors = ["Diego22rct <diegorafaelcisnerostafur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
